convert proto 和 entity 和client，实现在外部流传用client，内部用proto
